# migrator-studio

./: .gitignore  LICENSE  LLM_REFERENCE.md  README.md  SPEC.md  display.md  journal.md  project_document.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
archive/: ADVANCED-TECHNIQUES-SUMMARY.md  ERP_Migration_Transformation_Patterns.md  PROJECT_CONTEXT.md  PROPOSAL_Transformer_Framework.md  TFRM-00000001.py  TFRM-00000029.py  Transformer-Techniques-Pandas-Table.md  common_functions_for_sales_history_transformers.py  jira_task.md
docs/: DEVELOPMENT.md  QUICK_REFERENCE.md  marimo-implementation-archive.md
docs/examples/: TFRM-00000004.py  TFRM-COMPREHENSIVE-DEMO.py
examples/: README.md  TFRM-EXAMPLE-001.py  generate_sample_data.py
migrator_studio/: __init__.py  _tracking.py  _types.py  config.py  loader.py  session.py  step.py
migrator_studio/cli/: __init__.py  exporter.py  generator.py  main.py  parser.py
migrator_studio/codegen/: __init__.py  notebook.py  parser.py  sync.py
migrator_studio/display/: __init__.py  config.py  diff.py  models.py  preview.py  renderer.py  summary.py
migrator_studio/display/backends/: __init__.py  base.py  marimo.py  terminal.py
migrator_studio/operations/: __init__.py  _base.py  _polars_compat.py  _tracking.py  _validation.py  aggregate.py  apply.py  conditional.py  convert.py  date.py  dedup.py  field.py  filter.py  mapping.py  merge.py  string.py
migrator_studio/ops/: __init__.py  _base.py  _validation.py  aggregate.py  apply.py  conditional.py  convert.py  date.py  dedup.py  field.py  filter.py  mapping.py  merge.py  string.py
prototypes/: phase0_test1_append.py  phase0_test2_tracked_hook.py  phase0_test3_session.py
tests/: __init__.py  conftest.py  test_aggregate.py  test_apply.py  test_cli.py  test_conditional.py  test_convert.py  test_date.py  test_dedup.py  test_display.py  test_field.py  test_filter.py  test_loader.py  test_mapping.py  test_merge.py  test_registry.py  test_session.py  test_string.py
