[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "migrator_studio"
version = "0.1.0"
description = "Framework for building ERP data migration transformers faster"
readme = "SPEC.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
]

[project.scripts]
migrator = "migrator_studio.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
preview = [
    "marimo>=0.8.0",
    "rich>=13.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["migrator_studio"]
