[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "migrator_studio"
version = "0.1.0"
description = "Framework for building ERP data migration transformers faster"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Senuka Dinujaya" }]
keywords = ["data-migration", "pandas", "ERP", "transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "click>=8.0.0",
    "marimo>=0.1.0",
]

[project.scripts]
migrator = "migrator_studio.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Repository = "https://github.com/SenukaDinujaya/migrator-studio"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["migrator_studio"]

[tool.coverage.run]
source = ["migrator_studio"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
